Fixed issue with horizontal scrolling

--- a/assets/css/sass/utilities/_global.scss
+++ b/assets/css/sass/utilities/_global.scss
@@ -117,6 +117,11 @@ body {
         margin: 0 auto;
     }
 
+    .scroll-fix {
+        width: 100%;
+        overflow: hidden;
+    }
+
 
     hgroup,
     ul,ol,dd,
